# radio-stations

./: .env.example  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.h
database/migrations/: 001_initial_schema.sql
src/: main.cpp  mainwindow.cpp
src/config/: envLoader.cpp  envLoader.h
src/database/: databaseManager.cpp  databaseManager.h
src/models/: license.cpp  license.h  operator.cpp  operator.h  station.cpp  station.h
src/repositories/: baseRepository.h  licenseRepository.cpp  licenseRepository.h  operatorRepository.cpp  operatorRepository.h  stationRepository.cpp  stationRepository.h
src/resources/: form.ui
src/services/: licenseService.cpp  licenseService.h  operatorService.cpp  operatorService.h  stationService.cpp  stationService.h
src/ui/: baseTab.cpp  baseTab.h  operatorsTab.cpp  operatorsTab.h
src/validators/: licenseValidator.cpp  licenseValidator.h  operatorValidator.cpp  operatorValidator.h  stationValidator.cpp  stationValidator.h
